--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,40 @@
-icewm -- history of user-visible changes.  2025-03-09
+icewm -- history of user-visible changes.  2025-03-30
+
+Release icewm-3.7.3 released 2025-03-30
+---------------------------------------
+
+git shortlog --no-merges -e -n -w80,6,8 3.7.2...3.7.3
+
+Bert Gijsbers <gijsbers@science.uva.nl> (9):
+      Fix --disable-librsvg. Don't barf when --without-icesound. Update READMEs.
+      Set a title to the dock window.
+      Add the usertime and x11time commands to icesh.
+      Remove the remnants of the root proxy window. Only set focus to the icewm
+        top window when it hasn't focus yet.
+      Remove DESKTOP_AUTOSTART_ID, DESKTOP_STARTUP_ID, XDG_ACTIVATION_TOKEN
+        variables from the environment.
+      Improve support for _NET_WM_USER_TIME and _NET_STARTUP_ID for issue #799.
+      Fix typo for fUserTimeWindow in getUserTime.
+      Startup notification says to always accept updates to _NET_STARTUP_ID.
+      Fix compiler error on missing include errno.h.
+
+Eduard Bloch <blade@debian.org> (5):
+      Make location of nanosvg header customizable
+      By default, try fallback to non-specific Sans or non-bold
+      Fix cmake warning about wrong COMMENT arguments
+      Upgrade min.req. of CMake to version 3.10
+      App name filter shall consider the command line too
+
+Mehmet Akif 9oglu <madanadam@gmail.com> (1):
+      Translated using Weblate (Turkish)
+
 
 Release icewm-3.7.2 released 2025-03-09
 ---------------------------------------
 
 git shortlog --no-merges -e -n -w80,6,8 3.7.1...3.7.2
 
-Bert Gijsbers <gijsbers@science.uva.nl> (14):
+Bert Gijsbers <gijsbers@science.uva.nl> (15):
       Always print icons double-quoted for issue #794.
       Also support SVG icons when the image library supports it natively.
       Mark the WindowList as a toplevel and redirect its input to the listbox.
@@ -21,6 +50,7 @@ Bert Gijsbers <gijsbers@science.uva.nl> (14):
       Improve readability in SwitchWindow::resize.
       Ignore key releases and modifier presses in the top window key handler.
       Remove the incompatible cmake_path from the po CMakefile.
+      Prepare 3.7.2 release
 
 
 Release icewm-3.7.1 released 2025-02-27
@@ -451,15 +481,4 @@ Luna  Jernberg <bittin@opensuse.org> (1):
 
 Yasuhiko Kamata <belphegor@belbel.or.jp> (1):
       Translated using Weblate (Japanese)
-
-
-Release icewm-3.4.7 released 2024-03-25
----------------------------------------
-
-git shortlog --no-merges -e -n -w80,6,8 3.4.6...3.4.7
-
-Bert Gijsbers <gijsbers@science.uva.nl> (3):
-      Support more international keyboard layouts for issue #768.
-      detail
-      Prepare 3.4.7 release
 
